--- a/adminui.css
+++ b/adminui.css
@@ -1,16 +1,18 @@
 #customizePane {
     float: left;
-    width: 200px;
+    /*width: 200px;*/
 
 }
 
 #elementPane {
-    width: 500px;
+    width: 400px;
+    height: 80vh;
+    overflow: auto;
 }
 
 #examplePane {
     float: right;
-    width: 400px;
-    height: 400px;
-    border: groove green 5px;
+    width: 700px;
+    height: 600px;
+    background: url("example_act.png") top left / contain no-repeat;
 }
