CAP-2439 - reworked config, loading, setup

--- a/adminui.css
+++ b/adminui.css
@@ -16,3 +16,9 @@
     height: 600px;
     background: url("example_act.png") top left / contain no-repeat;
 }
+
+.colorExample {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+}
